--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,6 @@
   external_node_modules = ["fitz"]
 
 [[redirects]]
-  from = "/api/*"
+  from = "/.netlify/functions/*"
   to = "/.netlify/functions/:splat"
   status = 200
