--- a/netlify.toml
+++ b/netlify.toml
@@ -4,5 +4,6 @@
 
 [functions]
   directory = "netlify/functions"
-  node_bundler = "esbuild"
-  external_node_modules = ["fitz"]
+
+[functions."pdf_processor"]
+  runtime = "python3.8"
