--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,2 @@
 [build]
-  command = "pip install -r requirements.txt"
-  publish = "."
-
-[functions]
-  directory = "netlify/functions"
-
-[functions."processor"]
-  runtime = "python3.8"
-
+  functions = "functions"
