--- a/package.json
+++ b/package.json
@@ -1,1 +1,9 @@
-
+{
+  "name": "pdf-widget-tools",
+  "version": "1.0.0",
+  "dependencies": {
+    "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
+    "openai": "^4.20.1"
+  }
+}
