--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,9 @@
 [build]
   publish = "."
-
 [functions]
   directory = "netlify/functions"
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
