--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "pdf-widget-tools",
   "version": "1.0.0",
+  "description": "Generate professional marketing content for MSP services and products using AI.",
+  "main": "index.html",
+  "scripts": {
+    "start": "netlify dev"
+  },
   "dependencies": {
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
-    "openai": "^4.20.1"
+    "openai": "^4.20.1",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "netlify-cli": "^17.8.1"
   }
 }
